# memory

./: .coverage  .coveragerc  .gitignore  MEMORY_CORE_INTERFACES.md  README.md  __init__.py  access_control.py  cache_backend.py  chunking.py  connection_pool.py  consolidation.py  constants.py  coverage.json  entity_extraction.py  examples.py  formatting.py  health.py  helpers.py  ingest.py  manifest.py  mcp_server.py  memory_manager.py  memory_types.py  metrics.py  projects.yaml  pyproject.toml  rate_limiter.py  requirements.txt  scoring.py  server_config.py  sqlite_store.py  summarizer.py  tagging.py  utils.py  watcher.py
code_execution/: __init__.py  bridge.py  generate.py  runner.py  sandbox.py
docs/: architecture.md  configuration.md  ingestion-guide.md  mcp-tools-reference.md  scoring-and-ranking.md  troubleshooting.md
memory_core/: __init__.py  client.py  config.py  formatting.py  health.py  helpers.py  manifest.py  memory_manager.py  memory_types.py  models.py  projects.yaml  scoring.py  sqlite_store.py  summarizer.py  utils.py  watcher.py
memory_core.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
qa-fixtures/: kaizen-future-charge-manipulations.md
tests/: conftest.py  test_access_control.py  test_cache_backend.py  test_client.py  test_code_execution_tools.py  test_connection_pool.py  test_contracts.py  test_enterprise_health.py  test_formatting.py  test_health.py  test_helpers.py  test_ingest_core_behaviors.py  test_ingest_multi_project.py  test_ingest_pdf_support.py  test_mcp_server_handlers_and_cache.py  test_mcp_server_ingest.py  test_metrics.py  (+15 more)
(+62 files in other folders)
